# agent-eval-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
aek/: __init__.py  agent.py  async_runner.py  checks.py  checks_json.py  cli.py  cost.py  diff.py  from_logs.py  io.py  judge.py  report.py  runner.py  schema.py  tools.py
aek/backends/: __init__.py  anthropic_agent.py
examples/: cases.yaml  cases_compose.yaml  checks.yaml  tools_calc.py
tests/: test_checks.py  test_checks_json.py  test_schema.py
