[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval-kit"
version = "0.2.0"
description = "Eval harness for tool-using LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ma Xiaoming" }]
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "pyyaml",
    "rich",
    "tqdm",
    "jsonschema",
]

[project.scripts]
aek = "aek.cli:main"

[tool.setuptools.packages.find]
include = ["aek*"]
